# targetedMosp

./: README.md
bidimensional/: CMakeLists.txt
bidimensional/datastructures/includes/: BinaryHeap.h  BucketsQueue.h  Buckets_BDA.h  HeapNew.h  Label.h  Label_Buckets.h  NodeInfo.h  NodeInfoContainer.h  typedefs.h
bidimensional/datastructures/src/: NodeInfoContainer.cpp
bidimensional/graph/includes/: graph.h
bidimensional/graph/src/: graph.cpp
bidimensional/preprocessing/includes/: LexDijkstra.h  Preprocessor.h
bidimensional/preprocessing/src/: Preprocessor.cpp
bidimensional/search/includes/: BDA.h  Solution.h
bidimensional/src/: main.cpp
multidimensional/: CMakeLists.txt
multidimensional/3obj_results/: README
multidimensional/3obj_results/netMaker/: evaluateResults_netMaker.py  results.csv
multidimensional/3obj_results/roads/: evaluateResults.py  roads.csv
multidimensional/4obj_results/: gridInstances.inst  grids_4d_mda.csv  grids_4d_namoa.csv  netMaker_4d.inst  netMaker_4d_mda.csv  netMaker_4d_namoa.csv
multidimensional/5obj_results/: evaluationNet.ipynb  gridsAnalysis.ipynb  grids_5d_mda.csv  grids_5d_namoa.csv  netMaker_5d.inst  netMaker_5d_mda.csv  netMaker_5d_namoa.csv
multidimensional/datastructures/includes/: BinaryHeapMosp.h  Label.h  MemoryPool.h  NodeInfo.h  NodeInfoContainer.h  costs.h  typedefs.h
multidimensional/datastructures/src/: Label.cpp  costs.cpp
multidimensional/graph/includes/: DirectionManager.h  graph.h
multidimensional/graph/src/: graph.cpp
multidimensional/instances/: Grid-Problem13.grid  Grid-Problem9.grid  aStarExample.gr  netMaker_3o_10000n_1amin_10amax_20i_1s_scorr_79134.gr
multidimensional/preprocessing/includes/: LexDijkstra.h  Preprocessor.h
multidimensional/preprocessing/src/: Preprocessor.cpp
multidimensional/search/includes/: MDA-Star.h  MDA.h  NAMOA.h  NAMOA_lazy.h  Permanents.h  Solution.h  SolutionsList.h
multidimensional/search/src/: SolutionsList.cpp
multidimensional/src/: main.cpp
